testsuite/tests/parse-errors/unclosed_simple_expr.compilers.reference
Line 5, characters 0-1, Line 5, characters 5-7:  (3; 2;;
                                                 ^    ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 0-5,
Line 2, characters 10-12:
  begin 3; 2;;
  ^^^^^     ^^
Syntax error: 'end' expected, the highlighted 'begin' might be unmatched
Line 2, characters 5-6,
Line 2, characters 10-12:
  List.(3; 2;;
       ^    ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 12-13,
Line 2, characters 17-19:
  simple_expr.(3; 2;;
              ^    ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 12-13,
Line 2, characters 17-19:
  simple_expr.[3; 2;;
              ^    ^^
Syntax error: ']' expected, the highlighted '[' might be unmatched
Line 2, characters 13-14,
Line 2, characters 15-17:
  simple_expr.%[3;;
               ^ ^^
Syntax error: ']' expected, the highlighted '[' might be unmatched
Line 2, characters 13-14,
Line 2, characters 15-17:
  simple_expr.%(3;;
               ^ ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 13-14,
Line 2, characters 15-17:
  simple_expr.%{3;;
               ^ ^^
Syntax error: '}' expected, the highlighted '{' might be unmatched
Line 2, characters 9-10,
Line 2, characters 11-13:
  foo.Bar.%[3;;
           ^ ^^
Syntax error: ']' expected, the highlighted '[' might be unmatched
Line 2, characters 9-10,
Line 2, characters 11-13:
  foo.Bar.%(3;;
           ^ ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 9-10,
Line 2, characters 11-13:
  foo.Bar.%{3;;
           ^ ^^
Syntax error: '}' expected, the highlighted '{' might be unmatched
Line 2, characters 12-13,
Line 2, characters 17-19:
  simple_expr.{3, 2;;
              ^    ^^
Syntax error: '}' expected, the highlighted '{' might be unmatched
Line 2, characters 10-12:
  { x = 3; y;;
            ^^
Error: Syntax error
Line 2, characters 16-18:
  List.{ x = 3; y ;;
                  ^^
Error: Syntax error
Line 2, characters 7-9:
  [| 3; 2;;
         ^^
Error: Syntax error
Line 2, characters 11-13:
  List.[|3; 2;;
             ^^
Error: Syntax error
Line 2, characters 5-7:
  [3; 2;;
       ^^
Error: Syntax error
Line 2, characters 10-12:
  List.[3; 2;;
            ^^
Error: Syntax error
Line 2, characters 13-15:
  {< x = 3; y; ;;
               ^^
Error: Syntax error
Line 2, characters 17-19:
  List.{< x = 3; y ;;
                   ^^
Error: Syntax error
Line 2, characters 0-1,
Line 2, characters 20-22:
  (module struct end :;;
  ^                   ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Line 2, characters 5-6,
Line 2, characters 25-27:
  List.(module struct end :;;
       ^                   ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched

Line 2, characters 0-1,
Line 2, characters 2-3:
  (=;
  ^ ^
Syntax error: ')' expected, the highlighted '(' might be unmatched

